--- a/public/publicas/login.html
+++ b/public/publicas/login.html
@@ -7,6 +7,9 @@
       <link type="text/css" rel="stylesheet" href="./../../resources/css/materialize.min.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="./../../resources/css/general.css"  media="screen,projection"/>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <meta charset="UTF-8"> 
+        <meta name="description" content="Blogs">
+        <meta name="keywords" content="HTML,CSS,XML,JavaScript,Multimedia">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
@@ -15,21 +18,47 @@
       <a href="#!" class="brand-logo">BG</a>
          <a href="./../../public/publicas/index.html" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="./../../public/publicas/index.html">Home</a></li>
-        <li><a href="./../../public/publicas/registro.html">Registro</a></li>
-        <li><a href="./../../public/publicas/blogs.html">blogs</a></li>
-        <li><a href="./../../public/publicas/login.html">Iniciar Sesion</a></li>
+        <li><a href="./../../public/publicas/blogs.html">Blogs</a></li>
+        <li><a href="./../../public/publicas/login.html"><i class="material-icons left">assignment_ind</i>Iniciar Sesion</a></li>
       </ul>
     </div>
     </nav>
       <ul class="sidenav" id="mobile-demo">
-        <li><a>Home</a></li>
-        <li><a>Registro</a></li>
-        <li><a>blogs</a></li>
-        <li><a>Iniciar Sesion</a></li>
+        <li><a href="./../../public/publicas/blogs.html">Blogs</a></li>
+          <li><a href="./../../public/publicas/login.html"><i class="material-icons left">assignment_ind</i>Iniciar Sesion</a></li>
       </ul>
         <div class="container blogcontenedor z-depth-5">
-        
+            <div class="row">
+                <div class="col s6 offset-s4 m6 offset-m3 card-panel white login-contendor">
+                    <form id="loginForm">
+                        <div class="teal title-form"><h3 class="texto-rot flow-text">Login</h3></div>
+                        <div class="btn-float-send  z-depth-2 ">
+                            <button class="btn waves-effect waves-light" type="submit">Iniciar
+                            <i class="material-icons right">send</i>
+                            </button>
+                        </div>
+                         <div class="btn-float-register">
+                            <a href="./../../public/publicas/registro.html"> <button class="btn btn-floating btn-large waves-effect waves-light z-depth-2" type="button" >
+                               <i class="material-icons right">create</i>
+                            </button>
+                            </a>
+                        </div>
+                        <div class="row">
+                            <div class="col s10 m7 offset-s2 offset-m2 input-field">
+                                <input id="usuario" type="email" class="validate">
+                                <label for="usuario">Correo</label>
+                            </div>
+                            <div class="col s5 m7 offset-s2 offset-m2  input-field">
+                                <input id="contra" type="password" class="validate">
+                                <label for="contra">Contraseña</label>
+                             </div>
+                            <div class="col s7 m7 offset-m2">
+                                <a><p>¿olvidaste tú contrseña?</p></a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="./../../resources/plugins/materialize.min.js"></script>
