--- a/public/publicas/registro.html
+++ b/public/publicas/registro.html
@@ -6,7 +6,7 @@
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="./../../resources/css/materialize.min.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="./../../resources/css/general.css"  media="screen,projection"/>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <meta charset="UTF-8"> <meta name="description" content="Blogs"> <meta name="keywords" content="HTML,CSS,XML,JavaScript,Multimedia">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
@@ -15,21 +15,66 @@
       <a href="#!" class="brand-logo">BG</a>
          <a href="./../../public/publicas/index.html" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="./../../public/publicas/index.html">Home</a></li>
-        <li><a href="./../../public/publicas/registro.html">Registro</a></li>
-        <li><a href="./../../public/publicas/blogs.html">blogs</a></li>
-        <li><a href="./../../public/publicas/login.html">Iniciar Sesion</a></li>
+        <li><a href="./../../public/publicas/blogs.html">Blogs</a></li>
+        <li><a href="./../../public/publicas/login.html"><i class="material-icons left">assignment_ind</i>Iniciar Sesion</a></li>
       </ul>
     </div>
     </nav>
       <ul class="sidenav" id="mobile-demo">
-        <li><a>Home</a></li>
-        <li><a>Registro</a></li>
-        <li><a>blogs</a></li>
-        <li><a>Iniciar Sesion</a></li>
+        <li><a href="./../../public/publicas/blogs.html">Blogs</a></li>
+        <li><a href="./../../public/publicas/login.html"><i class="material-icons left">assignment_ind</i>Iniciar Sesion</a></li>
       </ul>
-        <div class="container blogcontenedor z-depth-5">
-        
+        <div class="blogcontenedor z-depth-5">
+            <div class="row">
+                <form id="registro">
+                 <div class="col s5 offset-s4 formRegistro z-depth-3 card-panel">
+                    <div class="row">
+                        <div class="file-field input-field">
+                        <div class="input_image z-depth-2 hoverable">
+                            <input type="file" >
+                            <img src="./../../resources/img/user_register.ico" class="responsive-img" />
+                          <div class="file-path-wrapper" style="visibility: hidden;">
+                            <input class="file-path validate" type="text">
+                          </div>
+                        </div>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="nombre" type="text" class="validate">
+                            <label for="nombre">Nombre</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="APP" type="text" class="validate">
+                            <label for="APP">Apellido Paterno</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="APM" type="text" class="validate">
+                            <label for="APM">Apellido Materno</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="username" type="text" class="validate">
+                            <label for="username">Username</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="correo" type="email" class="validate">
+                            <label for="correo">Correo</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="contra" type="password" class="validate">
+                            <label for="contra">Contraseña</label>
+                        </div>
+                        <div class="input-field col s6 offset-s3" >
+                          <input type="text" id="nacimiento" class="datepicker">
+                             <label for="nacimiento">Fecha de nacimiento</label>
+                        </div>
+                        <div class="col s8 offset-s4">
+                            <button class="btn waves-effect  btn-wrapper-bottom z-depth-3">
+                                Registrarse 
+                            </button>
+                        </div>
+                     </div>
+                </div> 
+               </form>
+            </div>
         </div>
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="./../../resources/plugins/materialize.min.js"></script>
