--- a/public/publicas/login.html
+++ b/public/publicas/login.html
@@ -53,7 +53,7 @@
                                 <label for="contra">Contraseña</label>
                              </div>
                             <div class="col s7 m7 offset-m2">
-                                <a><p>¿olvidaste tú contrseña?</p></a>
+                                <a><p>¿olvidaste tú contraseña?</p></a>
                             </div>
                         </div>
                     </form>
