--- a/public/publicas/personas.html
+++ b/public/publicas/personas.html
@@ -6,6 +6,7 @@
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="./../../resources/css/materialize.min.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="./../../resources/css/general.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="./../../resources/css/perfil.css"  media="screen,projection"/>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <meta charset="UTF-8"> 
         <meta name="description" content="Blogs">
@@ -28,11 +29,23 @@
           <li><a href="./../../public/publicas/login.html"><i class="material-icons left">assignment_ind</i>Iniciar Sesion</a></li>
       </ul>
             <div class="row">
-               <div class="col m8 s8 l8 card-panel offset-s1 offset-m1 offset-l1">
+               <div class="col m4 s4 l4 card offset-s4 offset-m4 offset-l4 z-depth-2">
                   <div class="row">
-                    <div class="col s4 m4 l4 offset-s4 offset-l4 offset-m4">
+                    <img src="./../../resources/img/material.png " class="responsive-img z-depth-2" style="z-index: -1px;" />
+                      <div class="col s12 m12 l12 ">
+                          <div class="img-perfil ">
+                            <img class="circle responsive-img " src="./../../resources/img/user_reg.png"/>
+                          </div>
+                      </div>
+                      <div class="col s12 m12 l12">
+                        <p>Nombre </p>
+                      </div>
+                      <!--div class="col s12 m12 l12">
+                          <img  style="width: 15em;height: 100%;"   />
+                      </div-->
+                    <!--div class="col s4 m4 l4 offset-s4 offset-l4 offset-m4">
                        <img class="circle responsive-img" src="https://i.ytimg.com/vi/C5wBkVrZAbo/maxresdefault.jpg"/>
-                    </div>  
+                    </div-->  
                  </div>
             </div>
         </div>
